@@ -1,35 +1,52 @@
 package components.rotor;
 
-import java.util.Map;
+import java.util.List;
 
 public class Rotor {
-    private Map<Integer, Integer> wiring;
-    private int notchDistanceFromTop;
-    private final int ALPHABET_LENGTH;
+    private final int id;
+    private final List<Integer> rightColumn;
+    private final List<Integer> leftColumn;
+    private int notchPosition;
+    private final int ALPHABET_LENGTH = 6;
 
-    public Rotor(int id, Map<Integer, Integer> wiring, int notchDistanceFromTop, int ALPHABET_LENGTH) {
-        this.wiring = wiring;
-        this.notchDistanceFromTop = notchDistanceFromTop;
-        this.ALPHABET_LENGTH = ALPHABET_LENGTH;
+    public Rotor(int id, List<Integer> rightColumn, List<Integer> leftColumn,  int notchPosition) {
+        this.id = id;
+        this.rightColumn = rightColumn;
+        this.leftColumn = leftColumn;
+        this.notchPosition = makePositionInBounds(notchPosition - 1);
     }
 
-    public int encode(int input) {
-            return wiring.get(input);
+    void rotate() {
+        int topLetterFroRightColumn = rightColumn.removeFirst();
+        int topLetterFromLeftColumn = leftColumn.removeFirst();
+
+        rightColumn.add(topLetterFroRightColumn);
+        leftColumn.add(topLetterFromLeftColumn);
+
+        notchPosition = makePositionInBounds(notchPosition - 1);
     }
 
-    private void rotate() {
-        for (Map.Entry<Integer, Integer> entry : wiring.entrySet()) {
-            int newKey = (entry.getKey() - 1) % ALPHABET_LENGTH;
-            int newValue = (entry.getValue() - 1) % ALPHABET_LENGTH;
-            wiring.put(newKey, newValue);
-        }
-        this.notchDistanceFromTop = (this.notchDistanceFromTop - 1) % ALPHABET_LENGTH;
-    }
-
-    public void initialRotate(int position) {
-        while (wiring.get(0) != position) {
+    void setPosition(int position) {
+        while (rightColumn.getFirst() != position) {
             rotate();
         }
     }
 
+    public int encodeForward(int entryLocation) {
+        int resultedLetter = rightColumn.get(entryLocation);
+        return leftColumn.indexOf(resultedLetter);
+    }
+
+    public int encodeBackward(int entryLocation) {
+        int resultedLetter = leftColumn.get(entryLocation);
+        return rightColumn.indexOf(resultedLetter);
+    }
+
+    private int makePositionInBounds(int position) {
+        return (position % ALPHABET_LENGTH + ALPHABET_LENGTH) % ALPHABET_LENGTH;
+    }
+
+    public int getNotchPosition() {
+        return notchPosition;
+    }
 }
